--- a/requirements.txt
+++ b/requirements.txt
@@ -21,6 +21,7 @@ Flask-Script==2.0.6
 Flask-Session==0.8.0
 Flask-SQLAlchemy==3.1.1
 greenlet==3.1.1
+gunicorn==23.0.0
 h11==0.14.0
 httplib2==0.22.0
 idna==3.10
